# if-filter-otus-2

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: ip_filter.cpp  ip_filter.h  main.cpp
tests/: test_ip_filter.cpp
